fix(app): Stop long labware names overflowing calibration screens (#3715)
* fix(app): Stop long labware names overflowing calibration screens

--- a/app/src/components/CalibratePanel/styles.css
+++ b/app/src/components/CalibratePanel/styles.css
@@ -35,6 +35,15 @@
   width: 100%;
 }
 
+/*
+ * TODO(mc, 2019-07-11): Copy-pasted from components/src/lists/lists.css
+ * as a workaround to fix HoverTooltip not working on ListItems due to
+ * pointer-events: none
+ */
+.disabled * {
+  color: var(--c-font-disabled);
+}
+
 .item_info_tooltip {
   @apply --font-body-1-light;
 
